--- a/task/src/main/webapp/WEB-INF/views/templates/button.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/button.html
@@ -7,6 +7,15 @@
 <div>
   <button class="button expanded" data-th-fragment="button-submit-expanded(title)" type="submit" data-th-text="${title}">
   </button>
+
+    <div data-th-fragment="button-add-table" data-th-remove="tag">
+        <ul class="menu align-right">
+            <li>
+                <a class="button fi-plus" data-th-href="add"></a>
+            </li>
+        </ul>
+    </div>
+
 </div>
 
 </body>
