--- a/task/src/main/webapp/WEB-INF/views/department/department.html
+++ b/task/src/main/webapp/WEB-INF/views/department/department.html
@@ -1,61 +1,26 @@
 <!DOCTYPE html>
-<html>
-	<head data-th-replace="templates/head :: head(#{titleform.departments})">
+<html lang="ua">
+	<head data-th-replace="~{templates/head :: head(#{titleform.departments})}">
+		<title>departments</title>
 	</head>
 	
 	<body>
-		
-		<div class="app-dashboard shrink-medium">
-			<div class="row expanded app-dashboard-top-nav-bar">
-				<div class="columns medium-2">
-					<button data-toggle="app-dashboard-sidebar"
-						class="menu-icon hide-for-medium"></button>
-					<a class="app-dashboard-logo" data-th-text="#{titleform.departments}"></a>
-				</div>
-				<div class="columns show-for-medium">
-				
-				</div>
-				<div data-th-insert="templates/menu/logof-logon.html"></div>
+
+		<nav data-th-insert="~{templates/nav :: core-nav(#{titleform.departments})}"></nav>
+
+		<div class="row flex-container expanded">
+			<div class="columns medium-2">
+				<ul id="componentMenu" class="vertical menu">
+					<li data-th-insert="~{templates/menu :: top-directories}"></li>
+				</ul>
 			</div>
-	
-			<div class="app-dashboard-body off-canvas-wrapper">
-				<div id="app-dashboard-sidebar"	class="app-dashboard-sidebar position-left off-canvas off-canvas-absolute reveal-for-medium" data-off-canvas>
-					<div class="app-dashboard-sidebar-inner">
-						<ul  data-th-replace="fragments/menu :: top-directories"></ul>
-					</div>
-				</div>
-	
-				<div class="app-dashboard-body-content off-canvas-content" data-off-canvas-content>
-					<div data-th-replace="fragments/department-fargment :: table-departments"></div>
-				</div>
+			<div class="columns medium-10">
+				<div data-th-insert="~{department/department-fragment :: ${nameFragment}}"></div>
 			</div>
 		</div>
-	
-	<!-- modal window delete -->
-	<div class="reveal" data-th-id="deleteRecord" data-reveal data-options="closeOnClick:false; closeOnEsc:false;">
-		<div data-th-replace="fragments/department-fargment :: deleteModalWindow"></div>
-	</div>	
-	
-	<div data-th-insert="templates/head :: script" data-th-remove="tag"></div>
-	
-	<script type="application/javascript" data-th-inline="javascript">
-		$(document).foundation();
-	</script>
-	
-	<script type="application/javascript" data-th-inline="javascript">
-			var openModal = $('[data-open][data-department-id]').on('click',
-				function() {
-					var ajax_url = "selectedDepartment/"	+ $(this).data('departmentId');
-					var $modal = $('#deleteRecord');
-					if (ajax_url) {
-						$.ajax(ajax_url).done(function(modalBodyResponse) {
-							$modal.html(modalBodyResponse);
-						});
-					}
-			});
-				
-			//$('#deleteRoom').foundation('open');	
-		</script>
+
+		<script data-th-replace="~{templates/core-script :: core-script}"></script>
+		<script type="text/javascript" data-th-src="@{/resources/js/menu.js}"></script>
 	
 	</body>
 </html>
