--- a/task/src/main/webapp/WEB-INF/views/fragments/department-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/department-fargment.html
@@ -54,7 +54,7 @@
 			<!-- disable -->
 			<div class="medium-12 columns">
 				<label data-th-text="#{inputlabel.isdisable}"></label>
-				<input type="checkbox" id="disable" data-th-field="*{disable}">
+				<label for="disable"></label><input type="checkbox" id="disable" data-th-field="*{disable}">
 			</div>
 	</div>
 	
