--- a/task/src/main/webapp/WEB-INF/views/position/position.html
+++ b/task/src/main/webapp/WEB-INF/views/position/position.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
 
-	<head data-th-replace="templates/head :: head(#{titleform.positions})"></head>
+<head data-th-replace="~{templates/head :: head(#{titleform.positions})}">
+		<title>position</title>
+	</head>
 	
 	<body>
 	
-		<nav id="header" data-th-replace="fragments/nav :: core-nav(#{titleform.positions})"></nav>
+		<nav id="header" data-th-replace="~{templates/nav :: core-nav(#{titleform.positions})}"></nav>
 		
 		<div class="row flex-container expanded">
 			<div class="columns medium-2">
 				<ul id="componentMenu" class="vertical menu">
-					<li data-th-replace="templates/menu :: top-directories"></li>
+					<li data-th-replace="~{templates/menu :: top-directories}"></li>
 				</ul>
 			</div>
 			<div class="columns medium-10">
-				<div data-th-replace="position/position-fargment :: ${nameFragment}"></div>				
+				<div data-th-replace="~{position/position-fargment :: ${nameFragment}}"></div>
 			</div>
 		</div>
 		
-		<script data-th-replace="fragments/core-script :: core-script"></script>
+		<script data-th-replace="~{templates/core-script :: core-script}"></script>
 		<script type="text/javascript" data-th-src="@{/resources/js/menu.js}"></script>
 		
 	</body>
