--- a/task/src/main/webapp/WEB-INF/views/employee/employees.html
+++ b/task/src/main/webapp/WEB-INF/views/employee/employees.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ua">
 
-	<head data-th-replace="~{templates/head :: head(~{::title})}">
-		<title data-th-text="#{titleform.emploee}"></title>
+	<head data-th-replace="~{templates/head :: head(#{titleform.emploee})}">
+		<title>employee</title>
 	</head>
 	
 <body>
