--- a/task/src/main/webapp/WEB-INF/views/user/user-form-fragment.html
+++ b/task/src/main/webapp/WEB-INF/views/user/user-form-fragment.html
@@ -13,10 +13,10 @@
     <div data-th-replace="${#strings.equals(nameFragment, 'add-user')} ? ~{templates/input-custom :: input-text-12(#{inputlabel.username},'username')}"></div>
 
     <!-- pass -->
-    <div data-th-replace="~{templates/input-custom :: input-pass-12(#{inputlabel.password},'password'))"></div>
+    <div data-th-replace="~{templates/input-custom :: input-pass-12(#{inputlabel.password},'password')}"></div>
 
     <!-- change pass -->
-    <div data-th-replace="~{templates/input-custom :: input-pass-12(#{inputlabel.repeatPassword},'repeatPassword'))"></div>
+    <div data-th-replace="~{templates/input-custom :: input-pass-12(#{inputlabel.repeatPassword},'repeatPassword')}"></div>
 
     <div data-th-replace="~{user/user-form-fragment :: fragment-form-role-diable}"></div>
 
