editing user button submit fragment

--- a/task/src/main/webapp/WEB-INF/views/user/user-form-fragment.html
+++ b/task/src/main/webapp/WEB-INF/views/user/user-form-fragment.html
@@ -32,7 +32,7 @@
     <div data-th-replace="~{user/user-form-fragment :: fragment-form-role-diable}"></div>
 
     <!-- button submit -->
-    <div data-th-replace="~{templates/input-custom :: input-submit-formt}" data-th-remove="tag"></div>
+    <div data-th-replace="~{templates/input-custom :: input-submit-form}" data-th-remove="tag"></div>
 
 </form>
 
