--- a/task/src/main/webapp/WEB-INF/views/user/user-form-fragment.html
+++ b/task/src/main/webapp/WEB-INF/views/user/user-form-fragment.html
@@ -43,7 +43,7 @@
     <div data-th-insert="~{user/user-form-fragment :: fragment-form-pass-change}"></div>
 
     <!-- button submit -->
-    <div data-th-replace="~{templates/input-custom :: input-submit-formt}" data-th-remove="tag"></div>
+    <div data-th-replace="~{templates/input-custom :: input-submit-form}" data-th-remove="tag"></div>
 
 </form>
 
