editing user button add table fragment

--- a/task/src/main/webapp/WEB-INF/views/department/department-fragment.html
+++ b/task/src/main/webapp/WEB-INF/views/department/department-fragment.html
@@ -11,7 +11,7 @@
             <tr>
                 <th data-th-text="#{inputlabel.nameDepartment}"></th>
                 <th data-sec-authorize="hasAnyAuthority('department:write')">
-                    <ul data-th-replace="~{templates/button :: button-add-table}"></ul>
+                    <ul class="menu align-right" data-th-replace="~{templates/button :: button-add-table}"></ul>
                 </th>
             </tr>
         </thead>
