--- a/task/src/main/webapp/WEB-INF/views/position/position-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/position/position-fargment.html
@@ -5,7 +5,7 @@
 						<th data-th-text="#{inputlabel.namePost}">name post</th>
 						<th data-th-text="#{inputlabel.heftPost}">heft post</th>
 						<th data-sec-authorize="hasAnyAuthority('position:write')">
-							<ul data-th-insert="~{templates/button :: button-add-table }"></ul>
+							<ul class="menu align-right" data-th-insert="~{templates/button :: button-add-table }"></ul>
 						</th>
 					</tr>
 				</thead>
