--- a/task/src/main/webapp/WEB-INF/views/templates/button.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/button.html
@@ -8,13 +8,11 @@
   <button class="button expanded" data-th-fragment="button-submit-expanded(title)" type="submit" data-th-text="${title}">
   </button>
 
-    <div data-th-fragment="button-add-table" data-th-remove="tag">
-        <ul class="menu align-right">
+        <ul class="menu align-right" data-th-fragment="button-add-table" >
             <li>
                 <a class="button fi-plus" data-th-href="add"></a>
             </li>
         </ul>
-    </div>
 
 </div>
 
